--- a/src/app/components/A2_Preloader/Preloader.module.scss
+++ b/src/app/components/A2_Preloader/Preloader.module.scss
@@ -15,13 +15,15 @@
   }
 
   .logo {
+    border: none;
+    outline: none;
     display: block;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 430px;
-    height: 932px;
+    width: 0.35 * 1062px;
+    height: 0.35 * 2304px;
     //border: 2px solid #FFF;
   }
 }
