--- a/src/app/HomePage.module.scss
+++ b/src/app/HomePage.module.scss
@@ -1,8 +1,11 @@
 @import "../assets/styles/app";
 
 .homePage {
+  position: relative;
   height: 100vh;
   background: #283c90;
+  display: flex;
+  flex-direction: column;
 
   @include desktop {
     display: grid;
@@ -10,12 +13,15 @@
   }
 
   .top {
+    flex-shrink: 0;
     position: relative;
+    z-index: 10;
     background: #f68754;
     height: 328px;
     border-radius: 0 0 24px 24px;
 
     @include desktop {
+      flex-shrink: unset;
       height: auto;
       border-radius: 0 48px 48px 0;
     }
@@ -43,6 +49,8 @@
   }
 
   .bottom {
+    flex-grow: 1;
+    position: relative;
     padding-top: 52px;
     display: flex;
     flex-direction: column;
@@ -54,13 +62,41 @@
     background-size: cover;
 
     @include desktop {
+      flex-grow: unset;
       padding-top: 0;
       padding-left: 80px;
       align-items: flex-start;
       justify-content: center;
     }
 
+    .background {
+      position: absolute;
+      background: green;
+      z-index: 1;
+      top: -24px;
+      left: 0;
+      bottom: 0;
+      right: 0;
+
+      @include desktop {
+        top: 0;
+        left: -48px;
+        right: 0;
+        width: auto;
+      }
+
+      & > video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+
+    }
+
     & > svg {
+      position: relative;
+      z-index: 2;
       width: 178px;
       height: 42px;
 
@@ -71,6 +107,8 @@
     }
 
     .description {
+      position: relative;
+      z-index: 2;
       margin-top: 20px;
       font-weight: 900;
       font-size: 18px;
@@ -91,6 +129,8 @@
     }
 
     .divider {
+      position: relative;
+      z-index: 2;
       height: 1px;
       width: 30px;
       margin-top: 12px;
@@ -104,6 +144,8 @@
     }
 
     .about {
+      position: relative;
+      z-index: 2;
       margin-top: 12px;
       font-weight: 500;
       font-size: 12px;
@@ -118,6 +160,8 @@
     }
 
     .buttons {
+      position: relative;
+      z-index: 2;
       margin-top: 20px;
       display: flex;
       justify-content: center;
