--- a/src/app/HomePage.module.scss
+++ b/src/app/HomePage.module.scss
@@ -3,6 +3,7 @@
 .homePage {
   position: relative;
   height: 100vh;
+  overflow: hidden;
   background: #283c90;
   display: flex;
   flex-direction: column;
